--- a/PlantProject/app/src/main/res/drawable/btn_water_auto.xml
+++ b/PlantProject/app/src/main/res/drawable/btn_water_auto.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false"
+    <item android:state_checked="false" android:state_enabled="true"
         android:drawable="@drawable/water_off_icon" />
     <item android:state_checked="true"
         android:drawable="@drawable/water_on_icon" />
+    <item android:state_enabled="false"
+        android:drawable="@drawable/unenable_water_icon"/>
+
 </selector>
