--- a/PlantProject/app/src/main/res/layout/activity_main.xml
+++ b/PlantProject/app/src/main/res/layout/activity_main.xml
@@ -16,9 +16,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         >
-
         <!--말풍선 -->
         <ImageView
             android:id="@+id/speechBubble"
@@ -256,6 +254,7 @@
                     android:id="@+id/water_auto_btn"
                     android:layout_width="60dp"
                     android:layout_height="50dp"
+                    android:enabled="true"
                     android:textOn=""
                     android:textOff=""
                     android:background="@drawable/btn_water_auto"
@@ -297,8 +296,7 @@
                     android:id="@+id/light_auto_btn"
                     android:layout_width="60dp"
                     android:layout_height="50dp"
-
-
+                    android:enabled="true"
                     android:textOn=""
                     android:textOff=""
                     android:background="@drawable/btn_light_auto"
@@ -314,7 +312,7 @@
                     android:textStyle="bold"
                     android:text="조명 OFF"
                     android:textColor="@color/black"
-                    android:textSize="17dp"
+                    android:textSize="18dp"
                     android:layout_marginTop="20px"
 
                     >
@@ -332,13 +330,14 @@
                 android:layout_below="@id/auto_text"
                 android:layout_toRightOf="@id/light_auto_layout"
                 android:layout_marginTop="25dp"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="50dp"
                 >
                 <!--자동 바람 버튼-->
                 <ToggleButton
                     android:id="@+id/wind_auto_btn"
                     android:layout_width="60dp"
                     android:layout_height="50dp"
+                    android:enabled="true"
                     android:textOn=""
                     android:textOff=""
                     android:background="@drawable/btn_wind_auto"
