온습도 센서 받아오기, 자동수동 조작 코드 완료

--- a/PlantProject/app/src/main/res/layout/activity_main.xml
+++ b/PlantProject/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="316dp"
-            android:text="사아자차카"
+            android:text="null"
 
             android:textColor="@color/white"
             android:textSize="25dp"
@@ -118,7 +118,7 @@
                     android:id="@+id/soil_humanity_data"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="40%"
+                    android:text="null"
                     android:layout_marginRight="7dp"
                     android:textStyle="bold"
                     android:textSize="27dp"
@@ -144,7 +144,7 @@
                     android:id="@+id/humanity_data"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="45%"
+                    android:text="null"
                     android:layout_marginRight="7dp"
                     android:textStyle="bold"
                     android:textSize="27dp"
@@ -168,7 +168,7 @@
                     android:id="@+id/temperature_data"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="29º"
+                    android:text="null"
                     android:layout_marginRight="7dp"
                     android:textStyle="bold"
                     android:textSize="27dp"
