로그인 회원가입 기능 진행중

--- a/PlantProject/app/src/main/res/layout/activity_main.xml
+++ b/PlantProject/app/src/main/res/layout/activity_main.xml
@@ -384,7 +384,7 @@
                 android:layout_below="@id/hand_text"
 
                 >
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/hand_water_btn"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
@@ -396,8 +396,8 @@
                     android:layout_margin="10dp"
                     >
 
-                </Button>
-                <Button
+                </androidx.appcompat.widget.AppCompatButton>
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/hand_light_btn"
                     android:layout_width="100dp"
                     android:layout_height="50dp"
@@ -410,8 +410,8 @@
 
                     >
 
-                </Button>
-                <Button
+                </androidx.appcompat.widget.AppCompatButton>
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/hand_wind_btn"
                     android:layout_width="110dp"
                     android:layout_height="50dp"
@@ -424,7 +424,7 @@
 
                     >
 
-                </Button>
+                </androidx.appcompat.widget.AppCompatButton>
             </LinearLayout>
 
 
