--- a/PlantProject/app/src/main/res/values/colors.xml
+++ b/PlantProject/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="grey_800">#424242</color>
     <color name="green_back">#79D19E</color>
     <color name="on_green">#20B25D</color>
+    <color name="green">#08A600</color>
 </resources>
